--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ matrix:
    include:
       - python: 2.7
         env:
-          - IPYTHON="ipython[all]==5.4.1"
+          - IPYTHON="ipython[all]==5.4.1" HYPEROPT_FMIN_SEED=3
       - python: 3.5
         env:
-          - IPYTHON=ipython[all]
+          - IPYTHON=ipython[all] HYPEROPT_FMIN_SEED=3
 
 services:
   - mongodb
