--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,31 @@
 dist: trusty
+
 language: python
 
+cache:
+  directories:
+    - $HOME/.cache/spark-versions
+
+env:
+   global:
+      - HYPEROPT_FMIN_SEED=3
+      - SPARK_VERSION=2.4.3
+      - SPARK_BUILD="spark-${SPARK_VERSION}-bin-hadoop2.6"
+      - SPARK_BUILD_URL="https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/${SPARK_BUILD}.tgz"
+      - SPARK_HOME=$HOME/.cache/spark-versions/${SPARK_BUILD}
+      - RUN_ONLY_LIGHT_TESTS=True
+      - NUMPY_VERSION=1.14.3
 matrix:
    include:
       - python: 2.7
         env:
-          - IPYTHON="ipython[all]==5.4.1" HYPEROPT_FMIN_SEED=3
+          - IPYTHON="ipython[all]==5.4.1"
       - python: 3.5
         env:
-          - IPYTHON=ipython[all] HYPEROPT_FMIN_SEED=3
+          - IPYTHON=ipython[all]
+      - python: 3.6
+        env:
+          - IPYTHON=ipython[all]
 
 services:
   - mongodb
@@ -17,16 +34,20 @@ before_script:
   - sleep 15  # mongo takes time to start
   - mongo mydb_test --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
 
+before_install:
+ - ./download_spark_dependencies.sh
+
 install:
   - sudo apt-get remove ipython
   - pip install --upgrade pip
   - pip install --upgrade setuptools
   - pip install --upgrade wheel
   - pip install $IPYTHON
-  - pip install --only-binary=numpy,scipy numpy scipy
+  - pip install --only-binary=numpy,scipy numpy==$NUMPY_VERSION scipy
   - python setup.py install
   - pip install pytest>=3.6 pytest-cov pep8 pytest-pep8
+  - pip install wrapt
 script:
-  - nosetests
+  - ./run_tests.sh
 after_success:
   - coveralls
