removed black dependencies, changed to recommendation

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
+# not used at the moment
 repos:
 -   repo: https://github.com/ambv/black
     rev: stable
     hooks:
     - id: black
-#      args: [--check]
