--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-dist: trusty
+os: linux
+dist: xenial
 
 language: python
 
@@ -15,7 +16,7 @@ env:
     - SPARK_HOME=$HOME/.cache/spark-versions/${SPARK_BUILD}
     - RUN_ONLY_LIGHT_TESTS=True
     - NUMPY_VERSION=1.14.3
-matrix:
+jobs:
   include:
     - python: 2.7
       env:
@@ -24,6 +25,12 @@ matrix:
       env:
         - IPYTHON=ipython[all]
     - python: 3.6
+      env:
+        - IPYTHON=ipython[all]
+    #- python: 3.7
+    #  env:
+    #    - IPYTHON=ipython[all]
+    - python: 3.8
       env:
         - IPYTHON=ipython[all]
 
@@ -47,9 +54,7 @@ install:
   - pip install .[MongoTrials]
   - pip install .[SparkTrials]
   - pip install .[ATPE]
-  - pip install pytest>=3.6
-  - pip install pytest-cov pep8 pytest-pep8
-  - pip install wrapt
+  - pip install pytest>=3.6 pytest-cov pep8 pytest-pep8 wrapt
 script:
   - ./run_tests.sh
 after_success:
