allow_failures: dist: xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ jobs:
       env:
         - IPYTHON=ipython[all]
         - NUMPY_VERSION=1.19.0
+  allow_failures:
+    - dist: xenial
 
 services:
   - mongodb
