--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,5 @@
 os: linux
-dist: trusty
-
+dist: xenial
 language: python
 
 cache:
@@ -27,18 +26,17 @@ jobs:
     - python: 3.6
       env:
         - IPYTHON=ipython[all]
-    #- python: 3.7
-    #  dist: xenial
-    #  env:
-    #    - IPYTHON=ipython[all]
+    - python: 3.7
+      env:
+        - IPYTHON=ipython[all]
     #    - NUMPY_VERSION=1.19.0
     - python: 3.8
-      dist: xenial
       env:
         - IPYTHON=ipython[all]
         - NUMPY_VERSION=1.19.0
   allow_failures:
-    - dist: xenial
+    - python: 3.7
+    - python: 3.8
 
 services:
   - mongodb
