--- a/.travis.yml
+++ b/.travis.yml
@@ -35,11 +35,11 @@ jobs:
     #  env:
     #    - IPYTHON=ipython[all]
     #    - NUMPY_VERSION=1.14.6
-    #- python: 3.8
-    #  dist: xenial
-    #  env:
-    #    - IPYTHON=ipython[all]
-    #    - NUMPY_VERSION=1.19.0
+    - python: 3.8
+      dist: xenial
+      env:
+        - IPYTHON=ipython[all]
+        - NUMPY_VERSION=1.19.0
   allow_failures:
     - dist: xenial
 
