--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-dist: trusty
+dist: bionic
 
 language: python
 
@@ -9,23 +9,29 @@ cache:
 env:
   global:
     - HYPEROPT_FMIN_SEED=3
-    - SPARK_VERSION=2.4.4
+    - SPARK_VERSION=3.0.1
     - SPARK_BUILD="spark-${SPARK_VERSION}-bin-hadoop2.7"
     - SPARK_BUILD_URL="https://archive.apache.org/dist/spark/spark-${SPARK_VERSION}/${SPARK_BUILD}.tgz"
     - SPARK_HOME=$HOME/.cache/spark-versions/${SPARK_BUILD}
     - RUN_ONLY_LIGHT_TESTS=True
-    - NUMPY_VERSION=1.14.3
 matrix:
   include:
     - python: 2.7
       env:
         - IPYTHON="ipython[all]==5.4.1"
+        - NUMPY_VERSION=1.14.3
     - python: 3.5
       env:
         - IPYTHON=ipython[all]
+        - NUMPY_VERSION=1.14.3
     - python: 3.6
       env:
         - IPYTHON=ipython[all]
+        - NUMPY_VERSION=1.14.3
+    - python: 3.7
+      env:
+        - IPYTHON=ipython[all]
+        - NUMPY_VERSION=1.18.1
 
 services:
   - mongodb
