--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ before_script:
 
 install:
   - sudo apt-get remove ipython
-  - pip install --upgrade pip setuptools wheel
+  - pip install --upgrade pip setuptools wheel pytools
   - pip install --only-binary=numpy,scipy numpy==$NUMPY_VERSION scipy $IPYTHON nose wrapt pyspark==$SPARK_VERSION
   - pip install -e '.[MongoTrials, SparkTrials, ATPE, dev]'
 script:
