--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_script:
 install:
   - sudo apt-get remove ipython
   - pip install --upgrade pip setuptools wheel coveralls pytest
-  - pip install --only-binary=numpy,scipy numpy==$NUMPY_VERSION scipy $IPYTHON wrapt pyspark==$SPARK_VERSION
+  - pip install --only-binary=numpy,scipy numpy==$NUMPY_VERSION scipy $IPYTHON pyspark==$SPARK_VERSION
   - pip install -e '.[MongoTrials, SparkTrials, ATPE, dev]'
 script:
   - pytest
