--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -16,7 +16,7 @@ nav:
 - Home: index.md
 - Tutorials:
   - 01. Basic Tutorial: tutorials/01.BasicTutorial.md
-  - 02. Mutiple Parameter Tutorial: tutorials/02.MultipleParameterTutorial.md
+  - 02. Multiple Parameter Tutorial: tutorials/02.MultipleParameterTutorial.md
 - Getting started:
   - Getting started with Hyperopt: getting-started/overview.md
   - Minimizing functions: getting-started/minimizing_functions.md
