--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -8,5 +8,5 @@ jobs:
       - uses: actions/setup-python@v2
       - run: pip install black==20.8b1 codespell flake8
       - run: black --check . || true
-      - run: codespell --quiet-level=2  # --ignore-words-list="" --skip=""
+      - run: codespell --ignore-words-list="hist,optionn" --quiet-level=2  # --skip=""
       - run: flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
