--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,21 @@ env:
 services:
   - mongodb
 
-before_script:
-  - sleep 15 # mongo takes time to start
-  - mongo mydb_test --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
+jobs:
+  include:
+    - name: "Run Linter (black)"
+      python: 3.9
+      install: pip install --upgrade black
+      script: black .
+    - name: "Run tests on python 3.7"
+      python: 3.7
+    - name: "Run tests on python 3.8"
+      python: 3.8
+    - name: "Run tests on python 3.9"
+      python: 3.9
+      env: NUMPY_VERSION=1.19.2
+  allow_failures:
+    - name: "Run tests on python 3.9"
 
 install:
   - sudo apt-get remove ipython || true  # ipython is not pre-installed in Focal
@@ -31,19 +43,9 @@ install:
   - pip install nose
   - pip install pyspark==$SPARK_VERSION
 
-jobs:
-  include:
-    - name: "Run Linter (black)"
-      python: 3.9
-      script: black .
-    - name: "Run tests on python 3.7"
-      python: 3.7
-    - name: "Run tests on python 3.8"
-      python: 3.8
-    - name: "Run tests on python 3.9"
-      python: 3.9
-  allow_failures:
-    - name: "Run tests on python 3.9"
+before_script:
+  - sleep 15 # mongo takes time to start
+  - mongo mydb_test --eval 'db.createUser({user:"travis",pwd:"test",roles:["readWrite"]});'
 
 script: pytest
 
