--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     rev: stable
     hooks:
     - id: black
-      args: [--check]
+      args: [--check, --diff]
 -   repo: https://github.com/asottile/pyupgrade
     rev: v2.7.3
     hooks:
