--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ cache:
 env:
   global:
     - HYPEROPT_FMIN_SEED=3
-    - SPARK_VERSION=3.0.1
+    - SPARK_VERSION=3.2.0
     - NUMPY_VERSION=1.18.1
     - IPYTHON=ipython[all]
 
@@ -26,6 +26,8 @@ jobs:
       script: black .
     - name: "Run tests on python 3.7"
       python: 3.7
+      env:
+        - SPARK_VERSION=3.0.1
     - name: "Run tests on python 3.8"
       python: 3.8
     - name: "Run tests on python 3.9"
