--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e '.[MongoTrials, SparkTrials, ATPE, dev]'
-          pip install pyspark==3.2.0
+          pip install pyspark
       - name: Test with pytest - Unit tests
         run: |
           python -m pytest ./hyperopt/tests/unit
