--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,10 @@
 repos:
--   repo: https://github.com/ambv/black
-    rev: stable
+-   repo: https://github.com/psf/black
+    rev: 23.1.0
     hooks:
     - id: black
-      args: [--check, --diff]
 -   repo: https://github.com/asottile/pyupgrade
-    rev: v2.7.3
+    rev: v3.3.1
     hooks:
     - id: pyupgrade
       args: [--py37-plus]
